--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ main#pages {
     margin: 0 auto 20px auto;
     padding: 20px 0;
     width: 100vw;
-    background: #eee;
+    border-bottom: 1px solid #eee;
     overflow: auto; }
     main#pages .section:last-child {
       margin: 0 auto 60px auto; }
@@ -332,7 +332,11 @@ main#pages {
             letter-spacing: 3px;
             font-size: 25px;
             opacity: 1;
-            transition: transform 0.2s ease-in-out; }
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.2s ease-in-out;
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out; }
+            main#pages.home .accordion span.opened .a-title:hover {
+              box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
             main#pages.home .accordion span.opened .a-title:hover {
               transform: translate(-50%, -50%) scale(1.03); }
             main#pages.home .accordion span.opened .a-title i {
@@ -373,7 +377,11 @@ main#pages {
         letter-spacing: 3px;
         font-size: 25px;
         opacity: 1;
-        transition: transform 0.2s ease-in-out; }
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        transition: box-shadow 0.2s ease-in-out;
+        transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out; }
+        main#pages.collection .dichotomy .left a:hover, main#pages.collection .dichotomy .right a:hover {
+          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
         main#pages.collection .dichotomy .left a:hover, main#pages.collection .dichotomy .right a:hover {
           transform: translate(-50%, -50%) scale(1.03); }
         main#pages.collection .dichotomy .left a i, main#pages.collection .dichotomy .right a i {
@@ -411,33 +419,20 @@ main#pages {
       width: 750px;
       max-width: 90vw; }
     main#pages.hnya .top a {
-      position: relative;
-      transition: 0.2s ease-in-out;
+      cursor: pointer;
+      display: inline-block;
+      padding: 2px 6px;
+      border-radius: 4px;
+      background: linear-gradient(0deg, #bf2a32, #ec4316);
+      color: #fff;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      transition: box-shadow 0.2s ease-in-out;
+      transition: border 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
       font-size: 24px; }
-      main#pages.hnya .top a:hover, main#pages.hnya .top a.active {
-        color: #bf2a32; }
-        main#pages.hnya .top a:hover::before, main#pages.hnya .top a:hover::after, main#pages.hnya .top a.active::before, main#pages.hnya .top a.active::after {
-          width: 100%; }
-      main#pages.hnya .top a::before, main#pages.hnya .top a::after {
-        content: "";
-        position: absolute;
-        right: 0;
-        bottom: -0.1em;
-        width: 0;
-        height: 1px;
-        background: #bf2a32;
-        transition: 0.2s ease-in-out; }
-      main#pages.hnya .top a::before {
-        left: 0;
-        right: initial;
-        top: -0.05em;
-        bottom: initial; }
-      main#pages.hnya .top a::after {
-        left: 50%;
-        right: initial;
-        transform: translate(-50%, 0); }
-      main#pages.hnya .top a::before {
-        content: none; }
+      main#pages.hnya .top a:hover {
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
+      main#pages.hnya .top a:active {
+        background: linear-gradient(0deg, #bf2a32, #bf2a32); }
   main#pages.hnya .bottom {
     position: relative;
     height: 100vh;
@@ -524,85 +519,55 @@ main#pages {
       main#pages.hnya .bottom .ig-user-title b a {
         color: #bf2a32; }
     main#pages.hnya .bottom .seeMore {
-      position: relative;
-      transition: 0.2s ease-in-out;
-      color: #bf2a32;
+      margin: 10px 0;
+      cursor: pointer;
+      display: inline-block;
+      padding: 2px 6px;
+      border-radius: 4px;
+      background: linear-gradient(0deg, #bf2a32, #ec4316);
+      color: #fff;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      transition: box-shadow 0.2s ease-in-out;
+      transition: border 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
       font-size: 24px; }
-      main#pages.hnya .bottom .seeMore:hover, main#pages.hnya .bottom .seeMore.active {
-        color: #bf2a32; }
-        main#pages.hnya .bottom .seeMore:hover::before, main#pages.hnya .bottom .seeMore:hover::after, main#pages.hnya .bottom .seeMore.active::before, main#pages.hnya .bottom .seeMore.active::after {
-          width: 100%; }
-      main#pages.hnya .bottom .seeMore::before, main#pages.hnya .bottom .seeMore::after {
-        content: "";
-        position: absolute;
-        right: 0;
-        bottom: -0.1em;
-        width: 0;
-        height: 1px;
-        background: #bf2a32;
-        transition: 0.2s ease-in-out; }
-      main#pages.hnya .bottom .seeMore::before {
-        left: 0;
-        right: initial;
-        top: -0.05em;
-        bottom: initial; }
-      main#pages.hnya .bottom .seeMore::after {
-        left: 50%;
-        right: initial;
-        transform: translate(-50%, 0); }
-      main#pages.hnya .bottom .seeMore::before {
-        content: none; }
-  main#pages.kamon {
-    background: #eee; }
-    main#pages.kamon .section {
-      width: 900px;
-      max-width: 100vw;
-      border-bottom: 1px solid #fff; }
-      main#pages.kamon .section .sub-section {
-        display: inline-block;
-        margin: 0 20px;
-        width: calc(50% - 40px);
-        text-align: left; }
-        main#pages.kamon .section .sub-section.left {
-          float: left; }
-        main#pages.kamon .section .sub-section.right {
-          float: right; }
-        main#pages.kamon .section .sub-section.txt {
-          margin: 10px 20px; }
-          main#pages.kamon .section .sub-section.txt ol {
-            list-style-position: inside; }
-        main#pages.kamon .section .sub-section h1 {
-          margin: 0 0 20px 0; }
-      main#pages.kamon .section img {
-        width: 100%; }
-      main#pages.kamon .section a {
-        position: relative;
-        transition: 0.2s ease-in-out;
-        color: #bf2a32; }
-        main#pages.kamon .section a:hover, main#pages.kamon .section a.active {
-          color: #bf2a32; }
-          main#pages.kamon .section a:hover::before, main#pages.kamon .section a:hover::after, main#pages.kamon .section a.active::before, main#pages.kamon .section a.active::after {
-            width: 100%; }
-        main#pages.kamon .section a::before, main#pages.kamon .section a::after {
-          content: "";
-          position: absolute;
-          right: 0;
-          bottom: -0.1em;
-          width: 0;
-          height: 1px;
-          background: #bf2a32;
-          transition: 0.2s ease-in-out; }
-        main#pages.kamon .section a::before {
-          left: 0;
-          right: initial;
-          top: -0.05em;
-          bottom: initial; }
-        main#pages.kamon .section a::after {
-          left: 50%;
-          right: initial;
-          transform: translate(-50%, 0); }
-        main#pages.kamon .section a::before {
-          content: none; }
+      main#pages.hnya .bottom .seeMore:hover {
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
+      main#pages.hnya .bottom .seeMore:active {
+        background: linear-gradient(0deg, #bf2a32, #bf2a32); }
+  main#pages.kamon .section {
+    width: 900px;
+    max-width: 100vw; }
+    main#pages.kamon .section .sub-section {
+      display: inline-block;
+      margin: 0 20px;
+      width: calc(50% - 40px);
+      text-align: left; }
+      main#pages.kamon .section .sub-section.left {
+        float: left; }
+      main#pages.kamon .section .sub-section.right {
+        float: right; }
+      main#pages.kamon .section .sub-section.txt {
+        margin: 10px 20px; }
+        main#pages.kamon .section .sub-section.txt ol {
+          list-style-position: inside; }
+      main#pages.kamon .section .sub-section h1 {
+        margin: 0 0 20px 0; }
+    main#pages.kamon .section img {
+      width: 100%; }
+    main#pages.kamon .section a {
+      cursor: pointer;
+      display: inline-block;
+      padding: 2px 6px;
+      border-radius: 4px;
+      background: linear-gradient(0deg, #bf2a32, #ec4316);
+      color: #fff;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      transition: box-shadow 0.2s ease-in-out;
+      transition: border 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out; }
+      main#pages.kamon .section a:hover {
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
+      main#pages.kamon .section a:active {
+        background: linear-gradient(0deg, #bf2a32, #bf2a32); }
   main#pages.store .shop {
     background: #eee; }
     main#pages.store .shop .prod-group {
@@ -626,20 +591,24 @@ main#pages {
           right: 0;
           top: 50%;
           transform: translate(0, -50%);
-          width: 85%;
+          width: 90%;
           height: 1.5px;
-          background: #bf2a32; }
+          background: linear-gradient(90deg, rgba(0, 0, 0, 0), #bf2a32); }
       main#pages.store .shop .prod-group .product {
         display: inline-block;
         float: left;
         margin: 0 20px 20px 20px;
         padding: 0 0 10px 0;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-        transition: box-shadow 0.2s ease-in-out; }
+        transition: box-shadow 0.2s ease-in-out;
+        transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out; }
         main#pages.store .shop .prod-group .product:hover {
           box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
-        main#pages.store .shop .prod-group .product:hover .p-img-hover, main#pages.store .shop .prod-group .product:hover .buyNow {
-          opacity: 1 !important; }
+        main#pages.store .shop .prod-group .product:hover {
+          background: #fff; }
+          main#pages.store .shop .prod-group .product:hover .p-img-hover,
+          main#pages.store .shop .prod-group .product:hover .buyNow {
+            opacity: 1 !important; }
         main#pages.store .shop .prod-group .product .p-img {
           cursor: pointer;
           position: relative;
@@ -660,13 +629,12 @@ main#pages {
             cursor: pointer;
             display: inline-block;
             padding: 2px 6px;
-            outline: none;
-            border: none;
             border-radius: 4px;
-            background: #bf2a32;
+            background: linear-gradient(0deg, #bf2a32, #ec4316);
             color: #fff;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
             transition: box-shadow 0.2s ease-in-out;
+            transition: border 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
             position: absolute;
             left: 50%;
             top: 50%;
@@ -674,7 +642,7 @@ main#pages {
             main#pages.store .shop .prod-group .product .p-img .buyNow:hover {
               box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
             main#pages.store .shop .prod-group .product .p-img .buyNow:active {
-              background: rgba(191, 42, 50, 0.7); }
+              background: linear-gradient(0deg, #bf2a32, #bf2a32); }
           main#pages.store .shop .prod-group .product .p-img .p-img-carousel {
             position: absolute;
             left: 50%;
@@ -693,7 +661,7 @@ main#pages {
               border-radius: 10px;
               box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); }
               main#pages.store .shop .prod-group .product .p-img .p-img-carousel i.active {
-                background: #bf2a32; }
+                background: linear-gradient(0deg, #bf2a32, #ec4316); }
         main#pages.store .shop .prod-group .product .p-name {
           margin: 10px;
           max-width: 300px;
@@ -702,19 +670,18 @@ main#pages {
           cursor: pointer;
           display: inline-block;
           padding: 2px 6px;
-          outline: none;
-          border: none;
           border-radius: 4px;
-          background: #bf2a32;
+          background: linear-gradient(0deg, #bf2a32, #ec4316);
           color: #fff;
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
           transition: box-shadow 0.2s ease-in-out;
+          transition: border 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
           cursor: default;
           margin: 0 0 0 10px; }
           main#pages.store .shop .prod-group .product .p-price:hover {
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
           main#pages.store .shop .prod-group .product .p-price:active {
-            background: rgba(191, 42, 50, 0.7); }
+            background: linear-gradient(0deg, #bf2a32, #bf2a32); }
           main#pages.store .shop .prod-group .product .p-price::before {
             content: "$ "; }
     main#pages.store .shop .prod-info {
@@ -739,17 +706,16 @@ main#pages {
         cursor: pointer;
         display: inline-block;
         padding: 2px 6px;
-        outline: none;
-        border: none;
         border-radius: 4px;
-        background: #bf2a32;
+        background: linear-gradient(0deg, #bf2a32, #ec4316);
         color: #fff;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-        transition: box-shadow 0.2s ease-in-out; }
+        transition: box-shadow 0.2s ease-in-out;
+        transition: border 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out; }
         main#pages.store .shop .prod-info .addToCart:hover {
           box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
         main#pages.store .shop .prod-info .addToCart:active {
-          background: rgba(191, 42, 50, 0.7); }
+          background: linear-gradient(0deg, #bf2a32, #bf2a32); }
       main#pages.store .shop .prod-info .special {
         color: gray; }
       main#pages.store .shop .prod-info .close-p-i {
@@ -775,9 +741,12 @@ main#pages {
           font-style: normal; }
   main#pages.about .section .overflow, main#pages.contact .section .overflow, main#pages.legal .section .overflow {
     margin: 0 auto;
+    padding: 0 10px;
     width: 900px;
     max-width: 90vw;
     max-height: 200px;
+    border-radius: 4px;
+    background: #eee;
     overflow-y: scroll; }
   main#pages.about .section h1, main#pages.about .section h2, main#pages.about .section .sub-section, main#pages.contact .section h1, main#pages.contact .section h2, main#pages.contact .section .sub-section, main#pages.legal .section h1, main#pages.legal .section h2, main#pages.legal .section .sub-section {
     margin: 0 auto 20px auto;
@@ -838,7 +807,7 @@ main#pages {
     outline: none;
     border: none;
     border-radius: 4px;
-    background: #fff;
+    background: #eee;
     font-size: 15px; }
     main#pages.about #subscribe input::placeholder, main#pages.about #subscribe textarea::placeholder, main#pages.contact #subscribe input::placeholder, main#pages.contact #subscribe textarea::placeholder, main#pages.legal #subscribe input::placeholder, main#pages.legal #subscribe textarea::placeholder {
       font-size: 12px; }
@@ -849,19 +818,18 @@ main#pages {
       cursor: pointer;
       display: inline-block;
       padding: 2px 6px;
-      outline: none;
-      border: none;
       border-radius: 4px;
-      background: #bf2a32;
+      background: linear-gradient(0deg, #bf2a32, #ec4316);
       color: #fff;
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
       transition: box-shadow 0.2s ease-in-out;
+      transition: border 0.2s ease-in-out, background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
       padding: 7px 0;
       font-size: 18px; }
       main#pages.about #subscribe input[type="submit"]:hover, main#pages.about #subscribe textarea[type="submit"]:hover, main#pages.contact #subscribe input[type="submit"]:hover, main#pages.contact #subscribe textarea[type="submit"]:hover, main#pages.legal #subscribe input[type="submit"]:hover, main#pages.legal #subscribe textarea[type="submit"]:hover {
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
       main#pages.about #subscribe input[type="submit"]:active, main#pages.about #subscribe textarea[type="submit"]:active, main#pages.contact #subscribe input[type="submit"]:active, main#pages.contact #subscribe textarea[type="submit"]:active, main#pages.legal #subscribe input[type="submit"]:active, main#pages.legal #subscribe textarea[type="submit"]:active {
-        background: rgba(191, 42, 50, 0.7); }
+        background: linear-gradient(0deg, #bf2a32, #bf2a32); }
   main#pages.about #subscribe textarea, main#pages.contact #subscribe textarea, main#pages.legal #subscribe textarea {
     resize: vertical;
     height: 100px; }
@@ -994,7 +962,7 @@ footer #footer-right {
         width: 90vw;
         text-align: left; }
         main#pages.store .shop .prod-group .p-g-name::after {
-          width: 65%; }
+          width: 75%; }
       main#pages.store .shop .prod-group .product {
         width: 90vw;
         margin: 0 0 20px 0 !important; }
